# glfw_android

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/dezel/glfw_android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/dezel/glfw_android/: ExampleUnitTest.java
flgw/: build.gradle
flgw/src/androidTest/java/com/dezel/flgw/: ExampleInstrumentedTest.java
flgw/src/main/: AndroidManifest.xml
flgw/src/main/res/values/: strings.xml
flgw/src/test/java/com/dezel/flgw/: ExampleUnitTest.java
